--- a/assets/pages/upcomingEvents.html
+++ b/assets/pages/upcomingEvents.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <nav class="navbar navbar-expand-md navbar-dark px-4">
             <a class="navbar-brand" href="../../index.html">
                 <img class="nav-img" src="../images/amazing_brand.png" alt="Amazing Events logo">
