--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <nav class="navbar navbar-expand-md navbar-dark px-4">
             <a class="navbar-brand" href="#">
                 <img class="nav-img" src="assets/images/amazing_brand.png" alt="Amazing Events logo">
